Reconcile payments before cancelling, and stop losing events
Recovery moved abandoned orders to cancelled without ever asking the payment
provider whether the charge had gone through. A charge whose response was lost
is indistinguishable from one that never happened, so that path could cancel an
order and release its stock while the customer had been billed for it. The
charge call also sat behind a retry policy with no idempotency key, so a
timeout could bill the customer twice, and a charge that succeeded before a
later step failed was never given back.

- charges and refunds are keyed per order; a repeated key returns the original
  result instead of moving money again
- PaymentProvider gains lookup(), so recovery asks the provider what happened
  before it cancels, and refund(), so a completed charge can be reversed
- an unreachable provider defers recovery instead of cancelling: not knowing is
  not the same as knowing there was no charge
- an unconfirmed refund keeps the order in compensation rather than marking it
  cancelled; payment_refund_id records a refund that was actually confirmed
- consumers retry a poison record with backoff and then park it on <topic>.DLT
  instead of blocking the partition forever and silently, with an alert on the
  dead-letter path; inbox deduplication makes replay safe
- producer durability is declared rather than inherited from client defaults
- new gauges for the recovery and outbox backlogs, which had no metric at all;
  a failed sample keeps the last reading rather than reporting a false zero
- pool sizing made explicit, since checkout holds a connection across catalog
  calls

The provider is still a mock. It models idempotency and lookup faithfully, but
its memory is a map in one JVM and no money moves.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>